api/static/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 20px;
}

.belowbody {
  margin-left: 20px;
}

h1 {
  width: auto;
  padding-bottom: 0px;
  padding-top: 26px;
  padding-left: 20px;
  padding-bottom: 6px;
  text-align: left;
  color: white;
}

h3 {
  margin-left: 16px;
}

.header {
  background-image: url('img/Banner.png');
  background-size: cover;
  background-position: center;
  height: 100px;
}

nav {
  width: auto;
  background-color: grey;
  padding-top: 6px;
  padding-bottom: 6px;
  border: 2px solid black;
}

.nav_button {
  width: 150px;
  height: 26px;
  margin-right: 7px;
  margin-left: 7px;
  text-align: center;

}

.dropdown-report {
  margin: 20px;
}

.reptable {
  border-collapse: collapse;
  width: 90%;
}

.historytable {
  border-collapse: collapse;
  width: 78%;
}

.reptable,
.rep {
  margin-top: 8px;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 1px;
  padding-bottom: 1px;
  border: 1px solid;
  text-align: right;
}

.disabled {
  background-color: grey;
  pointer-events: none;
  cursor: not-allowed;
  opacity: 0.6;
}

.container {
  display: flex;
  flex-direction: row;
}

.leftacc_container {
  width: 40%;
  float: left;
  margin-right: 48px;
}

.rightacc_container {
  width: 50%;
  float: right;
}

.table-container {
  flex: 1;
  margin-left: 5px;
  margin-top: 10px;
  margin-right: 5px;
}

.viewacc {
  width: 60%;
}

.submitrec {
  margin-left: 20px;
  width: 62px;
  height: 30px;
}

.fields {
  width: 165px;
}

.SPfields {
  width: 90px;
}

.percent {
  width: 90px;
}

.date {
  width: 130px;
}

.select {
  width: 165px;
}

.select_curr {
  width: 80px;
}

label {
  margin-left: 16px;
}

a,
a:visited,
a:hover,
a:active {
  color: rgb(0, 0, 169)
}

.leftAdvRep_container {
  width: 47%;
  float: left;
  margin-right: 24px;
}

.rightAdvRep_container {
  width: 47%;
  float: right;
}

.leftYear_container {
  width: 30%;
  float: left;
}

.centerYear_container {
  width: 37%;
  float: center;
}

.rightYear_container {
  width: 33%;
  float: right;
  margin-right: 10px;
}

